Fix ui dark mode

--- a/css/common.css
+++ b/css/common.css
@@ -4030,6 +4030,27 @@ li {
 .dark-mode .footer-wraper li.text-danger {
   color: #F7B801 !important;
 }
+.dark-mode .page-price-wrapper {
+  background-color: #1F1F1F;
+}
+.dark-mode .page-price-wrapper .step-number::after {
+  background-color: rgb(130, 81, 234) !important;
+}
+.dark-mode .page-price-wrapper .list-plan .plan-item.active {
+  border: 2px solid rgb(130, 81, 234) !important;
+}
+.dark-mode .page-price-wrapper .non-efundable-content-tab {
+  border: 1px solid rgb(130, 81, 234) !important;
+}
+.dark-mode .page-price-wrapper .choose-payment-type-wrapper .ui-tabs-active a {
+  border: 1px solid rgb(130, 81, 234) !important;
+}
+.dark-mode .select-plan-content-wrapper::after {
+  border-right: 10px solid #333 !important;
+}
+.dark-mode .ui-tabs-active a {
+  border-bottom: 1px solid red !important;
+}
 
 .light-mode .btn-header {
   border: 1px solid #313955 !important;
@@ -4131,6 +4152,24 @@ li {
 }
 .light-mode .footer-wrapper-mb .hot-match-comming .list-hot-match li a {
   color: #ffffff !important;
+}
+.light-mode .page-price-wrapper {
+  background-color: #e5e5e5;
+}
+.light-mode .page-price-wrapper .step-number::after {
+  background-color: #3ac5c9 !important;
+}
+.light-mode .page-price-wrapper .list-plan .plan-item.active {
+  border: 2px solid #3ac5c9 !important;
+}
+.light-mode .page-price-wrapper .choose-payment-type-wrapper .ui-tabs-active a {
+  border: 1px solid #3ac5c9 !important;
+}
+.light-mode .page-price-wrapper .non-efundable-content-tab {
+  border: 1px solid #3ac5c9 !important;
+}
+.light-mode .select-plan-content-wrapper::after {
+  border-right: 10px solid #fff !important;
 }
 
 /*# sourceMappingURL=common.css.map */
